--- a/views/login.html
+++ b/views/login.html
@@ -4,7 +4,7 @@
   <div class="container page">
     <div class="row">
       <div class="col-md-6 offset-md-3 col-xs-12">
-        <h1 class="text-xs-center">Sign up</h1>
+        <h1 class="text-xs-center">{{ isLogin ? 'Sign in ' : 'Sign up'}}</h1>
         <p class="text-xs-center">
           <a href="">Have an account?</a>
         </p>
@@ -14,16 +14,20 @@
         </ul>
 
         <form>
-          <fieldset class="form-group">
-            <input class="form-control form-control-lg" type="text" placeholder="Your Name" />
-          </fieldset>
+					{{ if !isLogin }}
+					<fieldset class="form-group">
+					  <input class="form-control form-control-lg" type="text" placeholder="Your Name" />
+					</fieldset>
+					{{ /if }}
           <fieldset class="form-group">
             <input class="form-control form-control-lg" type="text" placeholder="Email" />
           </fieldset>
           <fieldset class="form-group">
             <input class="form-control form-control-lg" type="password" placeholder="Password" />
           </fieldset>
-          <button class="btn btn-lg btn-primary pull-xs-right">Sign up</button>
+          <button class="btn btn-lg btn-primary pull-xs-right">
+						{{ isLogin ? 'Sign in ' : 'Sign up'}}
+					</button>
         </form>
       </div>
     </div>
