--- a/views/layout/layout.html
+++ b/views/layout/layout.html
@@ -2,20 +2,25 @@
 <html>
   <head>
     <meta charset="utf-8" />
+		<meta http-equiv="Cache-Control" content="no-store"/>  
+		<meta http-equiv="Pragma" content="no-cache"/>  
+		<meta http-equiv="Expires" content="0"/>  
     <title>Conduit</title>
+		
     <!-- Import Ionicon icons & Google Fonts our Bootstrap theme relies on -->
    <link
       href="/node_modules/ionicons/css/ionicons.min.css"
       rel="stylesheet"
       type="text/css"
     />
-    <link
+<!--    <link
       href="//fonts.googleapis.com/css?family=Titillium+Web:700|Source+Serif+Pro:400,700|Merriweather+Sans:400,700|Source+Sans+Pro:400,300,600,700,300italic,400italic,600italic,700italic"
       rel="stylesheet"
       type="text/css"
-    />
+    /> -->
     <!-- Import the custom Bootstrap 4 theme from our hosted CDN -->
     <link rel="stylesheet" href="/public/css/main.css" />
+		{{block 'head'}}{{/block}}
   </head>
   <body>
 		<!-- 头部 -->
@@ -26,5 +31,7 @@
 		{{/block}}
 		<!-- 底部 -->
 		{{include './footer.html'}}
+		<!-- 公共的js -->
+		{{block 'script'}}{{/block}}
   </body>
 </html>
