--- a/views/login.html
+++ b/views/login.html
@@ -9,28 +9,32 @@
           <a href="">Have an account?</a>
         </p>
 
+        {{if errors}}
+        {{each errors}}
         <ul class="error-messages">
-          <li>That email is already taken</li>
+          <li>{{$value}}</li>
         </ul>
+        {{/each}}
+        {{/if}}
 
-        <form>
-					{{ if !isLogin }}
-					<fieldset class="form-group">
-					  <input class="form-control form-control-lg" type="text" placeholder="Your Name" />
-					</fieldset>
-					{{ /if }}
+        <form action="/register" method="POST">
+          {{ if !isLogin }}
           <fieldset class="form-group">
-            <input class="form-control form-control-lg" type="text" placeholder="Email" />
+            <input class="form-control form-control-lg" type="text" placeholder="Your Name" name="username" />
+          </fieldset>
+          {{ /if }}
+          <fieldset class="form-group">
+            <input class="form-control form-control-lg" type="text" placeholder="Email" name="email" />
           </fieldset>
           <fieldset class="form-group">
-            <input class="form-control form-control-lg" type="password" placeholder="Password" />
+            <input class="form-control form-control-lg" type="password" placeholder="Password" name="password" />
           </fieldset>
           <button class="btn btn-lg btn-primary pull-xs-right">
-						{{ isLogin ? 'Sign in ' : 'Sign up'}}
-					</button>
+            {{ isLogin ? 'Sign in ' : 'Sign up'}}
+          </button>
         </form>
       </div>
     </div>
   </div>
 </div>
-{{/block}}
+{{/block}}    
